--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,35 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.split{
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+.left {
+  left:0;
+  width: 30%;
+  background-color:darkgray; 
+}
+.right {
+  right:0;
+  width: 70%;
+  background-color: beige;
+} 
+.centered{
+  position: absolute;
+  top:40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+} 
+
+.centered img{
+  width: 400px;
+  height: 200px;
+} 
